# yathzee

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
features/: combinations.feature  environment.py  play_round.feature  scores.feature  start_yathzee.feature
features/steps/: combinations.py  errors.py  game.py  score.py  setup.py
yahtzee/: app.py  command_handlers.py  commands.py  dices.py  errors.py  events.py  game.py  model.py  repository.py  result.py  score.py  views.py
yahtzee/game/: __init__.py  board.py  dices.py  events.py  game.py  players.py  score.py
